[gd_scene load_steps=4 format=3 uid="uid://pm361haybj3e"]

[ext_resource type="Script" path="res://scenes/doublepaddle.gd" id="1_wlaff"]
[ext_resource type="Texture2D" uid="uid://bdbw1orgf8dvf" path="res://assets/Plataforma dupla 1.png" id="2_vgyck"]
[ext_resource type="Texture2D" uid="uid://bow6nvi3ktfry" path="res://assets/Plataforma dupla 2.png" id="3_qjuij"]

[node name="DoublePaddle" type="Area2D"]
position = Vector2(333, 253)
script = ExtResource("1_wlaff")

[node name="CollisionRight" type="CollisionPolygon2D" parent="."]
position = Vector2(25.7563, 0)
scale = Vector2(0.4875, 1)
polygon = PackedVector2Array(50.5, -8.9, 50.5, 9, 48, 11.15, -47, 11.15, -49.5, 9, -49.5, -8.9)

[node name="CollisionLeft" type="CollisionPolygon2D" parent="."]
position = Vector2(-25.2438, 0)
scale = Vector2(0.4875, 1)
polygon = PackedVector2Array(50.5, -8.9, 50.5, 9, 48, 11.15, -47, 11.15, -49.5, 9, -49.5, -8.9)

[node name="SpriteRight" type="Sprite2D" parent="."]
position = Vector2(25.8, 0.178)
scale = Vector2(0.098, 0.098)
texture = ExtResource("3_qjuij")

[node name="SpriteLeft" type="Sprite2D" parent="."]
position = Vector2(-24.8, 0.178)
scale = Vector2(0.098, 0.098)
texture = ExtResource("2_vgyck")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
